# toy-language

./: .gitignore  README.md  ast_builder.py  environment.py  grammar.lark  interpreter.py  pyproject.toml  requirements.txt  run.py  toy
examples/: closures.toy  fibonacci.toy  functions.toy  hello_world.toy  loops.toy
src/: __init__.py  ast_builder.py  ast_nodes.py  environment.py  interpreter.py
